@@ -1,1 +1,1 @@
-0.32.1
+0.32.2
